@startuml UpdateConfigurationClassDiagram
!theme plain
skinparam classBackgroundColor #f0f0f0
skinparam classBorderColor #333
skinparam arrowColor #333
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 80

' ════════════════════════════════════════════════════════════════════════════════════
' CONTROLLER LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class ConfigurationController {

}

' ════════════════════════════════════════════════════════════════════════════════════
' SERVICE LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class ConfigurationService {

}

' ════════════════════════════════════════════════════════════════════════════════════
' ENTITY LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class Configuration {

}

class User {

}

class Role {

}

' ════════════════════════════════════════════════════════════════════════════════════
' UTILITY LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class AuthGuard {

}

class RoleGuard {

}

' RELATIONSHIPS
' ════════════════════════════════════════════════════════════════════════════════════

ConfigurationController --> ConfigurationService
ConfigurationController --> AuthGuard
ConfigurationController --> RoleGuard

ConfigurationService --> Configuration
ConfigurationService --> User

Configuration --> User
User --> Role

' ════════════════════════════════════════════════════════════════════════════════════
' DTO LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class UpdateConfigurationDto {
}

' ════════════════════════════════════════════════════════════════════════════════════
' RELATIONSHIPS
' ════════════════════════════════════════════════════════════════════════════════════

ConfigurationController -- UpdateConfigurationDto
ConfigurationController -- ConfigurationService
ConfigurationController -- AuthGuard
ConfigurationController -- RoleGuard
ConfigurationService -- Configuration
ConfigurationService -- User
Configuration -- User
User -- Role

@enduml
